FIX: redefine password
